# StayWithUsArtem

./: .envrc  .gitignore  config.toml.sample  env.local.sample  pyproject.toml
scripts/: SWUAsvc
stay/: __main__.py  app.py  configuration.py
